# airlines_dataprj

./: .gitignore  AGENTS.md  LEARNING_CHECKLIST.md  README.md  pyproject.toml
src/flight_tracker/: __init__.py  analysis.py  cli.py  collector.py  database.py  mock_provider.py  models.py
tests/: test_analysis.py  test_database.py  test_mock_provider.py  test_models.py
