[project]
name = "flight-tracker"
version = "0.1.0"
description = "Local flight price tracking data pipeline"
readme = "README.md"
authors = [
    { name = "Seongmoon Kim", email = "tylerk0226@naver.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
flight-tracker = "flight_tracker.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
